--- a/public/index.html
+++ b/public/index.html
@@ -69,10 +69,10 @@
           </div>
           <div class="row">
             <div class="col-sm">
-              <button type="button" class="btn btn-primary btn-lg">Kanye</button>
+              <button type="button" class="btn btn-primary btn-lg kanye">Kanye</button>
             </div>
             <div class="col-sm">
-              <button type="button" class="btn btn-secondary btn-lg">Trump</button>
+              <button type="button" class="btn btn-secondary btn-lg trump">Trump</button>
             </div>
           </div>
         </div>
