--- a/public/index.html
+++ b/public/index.html
@@ -39,49 +39,25 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+      <div class="container"></div>
+    </nav>
+
+    <!-- Page Content -->
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container">
-      
-    </div>
-  </nav>
-
-  <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">Who said it? Kanye or Trump?</h1>
-        
-        <div class="container">
-          <div class="row">
-            <p class="message"></p>
-          </div>
-          <div class="row">
-            <div class="col-sm">
-              <button type="button" class="btn btn-primary btn-lg kanye">Kanye</button>
-            </div>
-            <div class="col-sm">
-              <button type="button" class="btn btn-secondary btn-lg trump">Trump</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
 
   </body>
 </html>
+
+
+
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
+
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
+
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
